--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@material-ui/icons": "^4.11.2",
     "next": "10.0.9",
     "node-sass": "^5.0.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.16",
     "slug": "^4.0.3"
   }
 }
