--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "debugbuild": "next build --debug",
     "start": "next start",
     "export": "next build && next export"
   
